[project]
name = "tts-tower"
description = "Core implementation for Tower."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Unlicense"}
authors = [
    {name = "peper", email = "peper@jpl.nasa.gov"},
    {name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Unlicense"
]
dependencies = [
    "defusedxml",
    "docx",
    "docxtpl",
    "gitpython",
    "jinja2",
    "lxml",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "pytest",
    "jpl-time>=1.4.5,<2.0.0",
    "tts-html-utils>=0.4.0,<5.0.0",
    "tts-utilities>=0.2.1,<1.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NASA-JPL-Teamtools-Studio/tts_tower"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tower" = ["tower/resources/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[build-system]
requires = [
    "setuptools", 
    "setuptools_scm",
    "toml", 
    "wheel", 
    "tts-utilities>=0.2.1,<1.0.0"
    ]
build-backend = "setuptools.build_meta"